--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 </head>
 
 <body>
-
+    <header></header>
+    <section class="saCarousel"></section>
+    <section class="services"></section>
+    <section class="about"></section>
+    <section class="number"></section>
+    <section class="features"></section>
+    <section class="portfolio"></section>
+    <section class="blog"></section>
+    <footer></footer>
 </body>
 
 </html>
