--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- FONT AWE -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />ß
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- FONT GG -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,58 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="header__content">
+                <a href="#" class="header__logo">
+                    <img src="./img/logo-2.png" alt="header logo">
+                </a>
+                <div class="header__nav">
+                    <nav>
+                        <ul class="mainUl">
+                            <li>
+                                <a href="#" class="active">
+                                    <span>Home</span>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>Pages</span>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>Services</span>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>Post Layout</span>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>Blog</span>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>Contact Us</span>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <button class="btn--1">GET A QUOTE</button>
+                </div>
+            </div>
+        </div>
+    </header>
     <section class="saCarousel"></section>
     <section class="services"></section>
     <section class="about"></section>
