--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- FONT GG -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="./css/style.css">
@@ -73,7 +74,38 @@
             </div>
         </div>
     </header>
-    <section class="saCarousel"></section>
+    <section class="saCarousel">
+        <div class="container">
+            <div class="saCarousel__content">
+                <div class="saCarousel__title">
+                    <div class="title">
+                        <p>We are The Best</p>
+                        <h2>Freelance Product Designer Running</h2>
+                    </div>
+                    <p>We develop the relationships that underpin the next phase in your
+                        <br>
+                        organisation’s growth.
+                    </p>
+                    <div class="p--style1">
+                        <p>
+                            <i class="fa-solid fa-check"></i>
+                            <span>Master's degree in designing</span>
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check"></i>
+                            <span>Outstanding mobile design</span>
+                        </p>
+                    </div>
+                    <button class="btn--1">GET STARTED</button>
+                </div>
+                <div class="saCarousel__img">
+                    <div class="saCarousel__banner">
+                        <img src="./img/pic3_1.png" alt="saCarousel">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="services"></section>
     <section class="about"></section>
     <section class="number"></section>
