done services and add animation carousel

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!-- ANIMATE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="./css/style.css">
@@ -79,14 +81,14 @@
             <div class="saCarousel__content">
                 <div class="saCarousel__title">
                     <div class="title">
-                        <p>We are The Best</p>
-                        <h2>Freelance Product Designer Running</h2>
+                        <p class="animate__animated animate__fadeInUp">We are The Best</p>
+                        <h2 class="animate__animated animate__fadeInUp animate__delay-1s">Freelance Product Designer Running</h2>
                     </div>
-                    <p>We develop the relationships that underpin the next phase in your
+                    <p class="animate__animated animate__fadeInUp animate__delay-2s">We develop the relationships that underpin the next phase in your
                         <br>
                         organisation’s growth.
                     </p>
-                    <div class="p--style1">
+                    <div class="p--style1 animate__animated animate__fadeInUp animate__delay-3s">
                         <p>
                             <i class="fa-solid fa-check"></i>
                             <span>Master's degree in designing</span>
@@ -96,17 +98,56 @@
                             <span>Outstanding mobile design</span>
                         </p>
                     </div>
-                    <button class="btn--1">GET STARTED</button>
+                    <button class="btn--1 animate__animated animate__fadeInUp animate__delay-4s">GET STARTED</button>
                 </div>
                 <div class="saCarousel__img">
-                    <div class="saCarousel__banner">
+                    <div class="saCarousel__banner animate__animated animate__fadeInUp animate__delay-3s">
                         <img src="./img/pic3_1.png" alt="saCarousel">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="services"></section>
+    <section class="services">
+        <div class="container">
+            <div class="title">
+                <p>What We Do Best</p>
+                <h2>Our Digital Services</h2>
+            </div>
+            <div class="services__content">
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="./img/pic1_3.jpg" alt="service1">
+                    </div>
+                    <div class="title--1">
+                        <h3>Web Development</h3>
+                        <p>Vestibulum a efficitur ex. Ut iaculis dapibus iaculis. Praesent lacus magna, rhoncus quis
+                            magna quis.</p>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="./img/pic2_2.jpg" alt="service2">
+                    </div>
+                    <div class="title--1">
+                        <h3>Strategy & Research</h3>
+                        <p>Vestibulum a efficitur ex. Ut iaculis dapibus iaculis. Praesent lacus magna, rhoncus quis
+                            magna quis.</p>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="./img/pic3_2.jpg" alt="service2">
+                    </div>
+                    <div class="title--1">
+                        <h3>Growth Tracking</h3>
+                        <p>Vestibulum a efficitur ex. Ut iaculis dapibus iaculis. Praesent lacus magna, rhoncus quis
+                            magna quis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="about"></section>
     <section class="number"></section>
     <section class="features"></section>
