--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- LINE AWE -->
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+
+    <link rel="stylesheet" href="./css/flaticon/flaticon.css">
+
     <!-- FONT GG -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -82,19 +88,21 @@
                 <div class="saCarousel__title">
                     <div class="title">
                         <p class="animate__animated animate__fadeInUp">We are The Best</p>
-                        <h2 class="animate__animated animate__fadeInUp animate__delay-1s">Freelance Product Designer Running</h2>
+                        <h2 class="animate__animated animate__fadeInUp animate__delay-1s">Freelance Product Designer
+                            Running</h2>
                     </div>
-                    <p class="animate__animated animate__fadeInUp animate__delay-2s">We develop the relationships that underpin the next phase in your
+                    <p class="animate__animated animate__fadeInUp animate__delay-2s">We develop the relationships that
+                        underpin the next phase in your
                         <br>
                         organisation’s growth.
                     </p>
                     <div class="p--style1 animate__animated animate__fadeInUp animate__delay-3s">
                         <p>
-                            <i class="fa-solid fa-check"></i>
+                            <i class="las la-check"></i>
                             <span>Master's degree in designing</span>
                         </p>
                         <p>
-                            <i class="fa-solid fa-check"></i>
+                            <i class="las la-check"></i>
                             <span>Outstanding mobile design</span>
                         </p>
                     </div>
@@ -148,12 +156,60 @@
             </div>
         </div>
     </section>
-    <section class="about"></section>
+    <section class="about">
+        <div class="container">
+            <div class="about__content">
+                <div class="about__img wow animate__ animate__fadeInLeft animated" data-wow-duration="2s" data-wow-delaly="0" style="visibility: visible; animation-duration: 2s; animation-delay: 0; animation-name: fadeInLeft;">
+                    <div class="about__banner">
+                        <img src="./img/pic1.jpg" alt="about banner">
+                    </div>
+                </div>
+                <div class="about__detail wow animate__ animate__fadeInRight animated" data-wow-duration="2s" data-wow-delay="0" style="visibility: visible; animation-duration: 2s; animation-delay: 0; animation-name: fadeInRight;">
+                    <div class="title">
+                        <p>About Us</p>
+                        <h2>Build Your
+                            Business Website
+                            Better</h2>
+                    </div>
+                    <p>Proin laoreet leo vel enim gravida, at porttitor metus ultricies. Cras eu velit enim. Vivamus
+                        blandit, dolor ut aliquet rutrum, ex elit mattis sapien, non molestie felis neque et nulla. Sed
+                        euismod turpis id nibh suscipit semper. Pellentesque dapibus risus arcu.</p>
+                    <div class="about__list">
+                        <ul>
+                            <li>
+                                <i class="flaticon-check"></i>
+                                <span>We support programs that create advancement opportunities for people.</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-check"></i>
+                                <span>Get a view of events and trends. Be updated on our recent news.</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-check"></i>
+                                <span>Finally, it all comes down to people. Creating a winning team.</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-check"></i>
+                                <span>Get a view of events and trends. Be updated on our recent news.</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="btn--1">LEARN MORE</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="number"></section>
     <section class="features"></section>
     <section class="portfolio"></section>
     <section class="blog"></section>
     <footer></footer>
+
+    <!-- WOW ANIMATION: Sẽ xuất hiện hiệu ứng khi roll xuống section đó -->
+    <script src="./js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
