--- a/index.html
+++ b/index.html
@@ -159,12 +159,15 @@
     <section class="about">
         <div class="container">
             <div class="about__content">
-                <div class="about__img wow animate__ animate__fadeInLeft animated" data-wow-duration="2s" data-wow-delaly="0" style="visibility: visible; animation-duration: 2s; animation-delay: 0; animation-name: fadeInLeft;">
+                <div class="about__img wow animate__fadeInLeft animated" data-wow-duration="2s" data-wow-delaly="0.2s"
+                    style="visibility: visible; animation-duration: 2s; animation-delay: 0.2s; animation-name: fadeInLeft;">
                     <div class="about__banner">
                         <img src="./img/pic1.jpg" alt="about banner">
                     </div>
                 </div>
-                <div class="about__detail wow animate__ animate__fadeInRight animated" data-wow-duration="2s" data-wow-delay="0" style="visibility: visible; animation-duration: 2s; animation-delay: 0; animation-name: fadeInRight;">
+                <div class="about__detail wow animate__fadeInRight animated" data-wow-duration="2s"
+                    data-wow-delay="0.2s"
+                    style="visibility: visible; animation-duration: 2s; animation-delay: 0.2s; animation-name: fadeInRight;">
                     <div class="title">
                         <p>About Us</p>
                         <h2>Build Your
@@ -199,12 +202,62 @@
             </div>
         </div>
     </section>
-    <section class="number"></section>
+    <section class="number">
+        <div class="container">
+            <div class="number__content">
+                <div class="number__item">
+                    <i class="flaticon-smile"></i>
+                    <p>
+                        <span class="counter">18</span> Ml
+                    </p>
+                    <p>Satisfied Clients</p>
+                </div>
+                <div class="number__item">
+                    <i class="flaticon-line-chart"></i>
+                    <p>
+                        <span class="counter">20</span> Ml
+                    </p>
+                    <p>Project Completed</p>
+                </div>
+                <div class="number__item">
+                    <i class="flaticon-startup"></i>
+                    <p>
+                        <span class="counter">30</span> Ml
+                    </p>
+                    <p>Project Lunched</p>
+                </div>
+                <div class="number__item">
+                    <i class="flaticon-confetti"></i>
+                    <p>
+                        <span class="counter">50</span>
+                    </p>
+                    <p>Years Completed</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <section class="features"></section>
     <section class="portfolio"></section>
     <section class="blog"></section>
     <footer></footer>
 
+    <!-- JQUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- WAYPOINTS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
+        integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- COUNTING UP -->
+    <script src="./js/jquery.counterup.min.js"></script>
+    <script>
+        $('.counter').counterUp({
+            delay: 10,
+            time: 3000,
+        });
+    </script>
     <!-- WOW ANIMATION: Sẽ xuất hiện hiệu ứng khi roll xuống section đó -->
     <script src="./js/wow.min.js"></script>
     <script>
