--- a/index.html
+++ b/index.html
@@ -237,7 +237,68 @@
         </div>
         </div>
     </section>
-    <section class="features"></section>
+    <section class="features">
+        <div class="container">
+            <div class="features__content">
+                <div class="features__detail">
+                    <div class="title wow animate__fadeInLeft animated" data-wow-duration="2s" data-wow-delay="0.2s"
+                        style="visibility: visible; animation-duration: 2s; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                        <p>Our Features</p>
+                        <h2>
+                            Behind The Story <br> Of Samar Agency
+                        </h2>
+                    </div>
+                    <div class="features__grid">
+                        <div class="features__item wow animate__fadeInRight animated" data-wow-duration="2s"
+                            data-wow-delay="0.4s"
+                            style="visibility: visible; animation-duration: 2s; animation-delay: 0.4s; animation-name: fadeInRight;">
+                            <div class="features__bg">
+                                <i class="flaticon-idea features__hover"></i>
+                                <div class="title--1">
+                                    <h3 class="features__hover">Idea &amp; Analysis Gathering</h3>
+                                    <p class="features__hover">Maecenas laoreet efficitur sagittis. Aliquam eleifend
+                                        nisl leo, sit amet
+                                        consequat augue.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="features__item wow animate__fadeInRight animated" data-wow-duration="2s"
+                            data-wow-delay="0.6s"
+                            style="visibility: visible; animation-duration: 2s; animation-delay: 0.6s; animation-name: fadeInRight;"
+                            id="item--2">
+                            <div class="features__bg">
+                                <i class="flaticon-coding features__hover"></i>
+                                <div class="title--1">
+                                    <h3 class="features__hover">Design &amp; Developing</h3>
+                                    <p class="features__hover">Maecenas laoreet efficitur sagittis. Aliquam eleifend
+                                        nisl leo, sit amet
+                                        consequat augue.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="features__item wow animate__fadeInRight animated" data-wow-duration="2s"
+                            data-wow-delay="0.8s"
+                            style="visibility: visible; animation-duration: 2s; animation-delay: 0.8s; animation-name: fadeInRight;">
+                            <div class="features__bg">
+                                <i class="flaticon-rocket features__hover"></i>
+                                <div class="title--1">
+                                    <h3 class="features__hover">Testing &amp; Lunching</h3>
+                                    <p class="features__hover">Maecenas laoreet efficitur sagittis. Aliquam eleifend
+                                        nisl leo, sit amet
+                                        consequat augue.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="features__img">
+                    <div class="features__banner">
+                        <img src="./img/pic3.png" alt="features banner">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="portfolio"></section>
     <section class="blog"></section>
     <footer></footer>
