--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- ANIMATE -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+    <!-- FANCYBOX -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -299,7 +302,114 @@
             </div>
         </div>
     </section>
-    <section class="portfolio"></section>
+    <section class="portfolio">
+        <div class="container">
+            <div class="title">
+                <p>Portfolio</p>
+                <h2>
+                    Our Latest Work
+                </h2>
+            </div>
+            <div class="portfolio__gallery">
+                <div class="portfolio__item wow animate__ wow animate__animated animate__fadeInUp animated"
+                    style="visibility: visible; animation-name: fadeInUp;">
+                    <img src="./img/pic1_2.jpg" alt="gallery1">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="./img/pic1_2.jpg" data-thumb="./img/pic1_2.jpg" data-fancybox="gallery"
+                                data-caption="Design 1">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Jhone Doe</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item wow animate__ wow animate__animated animate__fadeInUp animated"
+                    style="visibility: visible; animation-name: fadeInUp;">
+                    <img src="./img/pic2_1.jpg" alt="gallery2">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="./img/pic2_1.jpg" data-thumb="./img/pic2_1.jpg" data-fancybox="gallery"
+                                data-caption="Design 2">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Jhone Doe</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item wow animate__ wow animate__animated animate__fadeInUp animate__delay-1s animated"
+                    style="visibility: visible; animation-name: fadeInUp;">
+                    <img src="./img/pic3_1.jpg" alt="gallery3">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="./img/pic3_1.jpg" data-thumb="./img/pic3_1.jpg" data-fancybox="gallery"
+                                data-caption="Design 3">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Jhone Doe</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item wow animate__ wow animate__animated animate__fadeInUp animate__delay-1s animated"
+                    style="visibility: visible; animation-name: fadeInUp;">
+                    <img src="./img/pic4.jpg" alt="gallery4">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="./img/pic4.jpg" data-thumb="./img/pic4.jpg" data-fancybox="gallery"
+                                data-caption="Design 4">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Jhone Doe</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item wow animate__ wow animate__animated animate__fadeInUp animate__delay-2s animated"
+                    style="visibility: visible; animation-name: fadeInUp;">
+                    <img src="./img/pic5.jpg" alt="gallery5">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="./img/pic5.jpg" data-thumb="./img/pic5.jpg" data-fancybox="gallery"
+                                data-caption="Design 5">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Jhone Doe</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item wow animate__ wow animate__animated animate__fadeInUp animate__delay-1s animated"
+                    style="visibility: visible; animation-name: fadeInUp;">
+                    <img src="./img/pic6.jpg" alt="gallery6">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="./img/pic6.jpg" data-thumb="./img/pic6.jpg" data-fancybox="gallery"
+                                data-caption="Design 6">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Jhone Doe</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="blog"></section>
     <footer></footer>
 
@@ -323,6 +433,14 @@
     <script src="./js/wow.min.js"></script>
     <script>
         new WOW().init();
+    </script>
+
+    <!-- FANCYBOX -->
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+
+    <script>
+        Fancybox.bind('[data-fancybox="gallery"]', {
+        });
     </script>
 </body>
 
