--- a/index.html
+++ b/index.html
@@ -494,7 +494,185 @@
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="footer__form wow animate__ wow animate__animated animate__fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
+                <div class="footer__text">
+                    <h2>Subscribe To Our Newsletter</h2>
+                </div>
+                <div class="footer__email">
+                    <form action="">
+                        <input type="email" name="" id="" placeholder="Your Email Address">
+                        <button>
+                            <i class="las la-paper-plane"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer__content">
+                <div class="footer__item footer__contact wow animate__ wow animate__animated animate__fadeIn animate__delay-1s animated" style="visibility: visible; animation-name: fadeIn;">
+                    <a href="#">
+                        <img src="./img/logo-white.png" alt="">
+                    </a>
+                    <ul>
+                        <li>
+                            <i class="fa fa-phone"></i>
+                            <span>
+                                1800-123-4567
+                                <br>
+                                +91 987-654-3210
+                            </span>
+                        </li>
+                        <li>
+                            <i class="fa fa-envelope"></i>
+                            <span>
+                                info@example.com
+                                <br>
+                                services@gmail.com
+                            </span>
+                        </li>
+                        <li>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>
+
+                                Demo Address #8901 Marmora
+                                <br>
+                                Road City
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item wow animate__ wow animate__animated animate__fadeIn animate__delay-1s animated" style="visibility: visible; animation-name: fadeIn;">
+                    <h3>
+                        Our links
+                    </h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                About Us
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Services
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Team
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Blog
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item wow animate__ wow animate__animated animate__fadeIn animate__delay-1s animated" style="visibility: visible; animation-name: fadeIn;">
+                    <h3>
+                        Our Services
+                    </h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Strategy & Research
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Web Development
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Web Solution
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Digital Marketing
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                App Design
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item wow animate__ wow animate__animated animate__fadeIn animate__delay-1s animated" style="visibility: visible; animation-name: fadeIn;">
+                    <h3>
+                        Other links
+                    </h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                FAQ
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Portfolio
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Privacy Policy
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Terms & Conditions
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-angle-right"></i>
+                                Support
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <div class="container footer__bottom">
+                <p>Copyright © 2021 <span>DexignZone</span> . All rights reserved.</p>
+                <div class="footer__social">
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="">
+
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
