--- a/index.html
+++ b/index.html
@@ -674,6 +674,13 @@
         </div>
     </footer>
 
+    <!-- BACK TO TOP -->
+    <a href="#" class="back-to-top cd-top text-replace js-cd-top">
+        <i class="fa fa-arrow-up"></i>
+    </a>
+    <script src="./js/util-backtotop.js"></script>
+    <script src="./js/main-backtotop.js"></script>
+
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
